# test_cmake

./: .travis.yml  CMakeLists.txt  README.md  myprojectConfig.cmake
include/myproject/: myproject.h
project/: CMakeLists.txt  main.cpp
